tests/lean/eval_expr_error.lean.expected.out
eval_expr_error.lean:5:8: error: invalid eval_expr, type must be a closed expression
